[metadata]
name = purse
version = 0.2
author = Plataux LLC
license = Apache License Version 2.0
license_file = LICENSE
author_email = mk@plataux.com
description = High Level Asyncio interface to redis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/plataux/purse
project_urls =
    Bug Tracker = https://github.com/plataux/purse/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    setuptools>=50.0.0
    pydantic~=1.8.2
    aioredis~=2.0.0

[options.packages.find]
where = src

[options.extras_require]
testing =
    flake8==4.0.1
    tox==3.24.4
    pytest==6.2.5
    pytest-cov==3.0.0
    mypy==0.910
    sphinx~=4.2.0
    sphinx-rtd-theme~=1.0.0
    recommonmark~=0.7.1


[options.package_data]
purse = py.typed

[flake8]
max-line-length = 160

